<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            android:icon="@drawable/nav_home"/>
        <item
            android:id="@+id/nav_milk_inventory"
            android:title="@string/menu_milk_inventory"
            android:icon="@drawable/nav_home"/>
        <item
            android:id="@+id/nav_animal_health"
            android:title="@string/menu_animal_health"
            android:icon="@drawable/nav_home"/>
        <item
            android:id="@+id/nav_breeding"
            android:title="@string/menu_breeding"
            android:icon="@drawable/nav_home"/>
        <item
            android:id="@+id/nav_analytics"
            android:title="@string/menu_analytics"
            android:icon="@drawable/nav_analytics"/>
        <item
            android:id="@+id/nav_tasks"
            android:title="@string/menu_tasks"
            android:icon="@drawable/nav_tasks"/>
        <item
            android:id="@+id/nav_feeding"
            android:title="@string/menu_feeding"
            android:icon="@drawable/nav_home"/>
    </group>

</menu>