<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:layout_width="360dp"
        android:layout_height="219dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/text_content_description" />

    <TextView
        android:id="@+id/name"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:text="@string/text_cow_name"/>

    <TextView
        android:id="@+id/tag"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_bottomOf="@+id/cow_name"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:text="@string/text_tag"
        />


    <TextView
        android:id="@+id/species"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_bottomOf="@+id/tag"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:text="@string/text_species"/>

    <TextView
        android:id="@+id/gender"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_bottomOf="@+id/age"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:text="@string/text_gender"/>

    <TextView
        android:id="@+id/breed"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_bottomOf="@+id/gender"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:text="@string/text_breed"/>

    <TextView
        android:id="@+id/age"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_bottomOf="@+id/breed"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:text="@string/text_age"/>

    <TextView
        android:id="@+id/purpose"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_bottomOf="@+id/status"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:text="@string/text_purpose"/>

    <TextView
        android:id="@+id/status"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_bottomOf="@+id/purpose"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"

        android:text="@string/text_status"/>

    <TextView
        android:id="@+id/weight"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_bottomOf="@+id/weight"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:text="@string/text_weight"/>

</LinearLayout>